--- a/astral-game.html
+++ b/astral-game.html
@@ -89,10 +89,18 @@
             margin-bottom: 20px;
             text-shadow: 0 0 10px #ffd700;
         }
-        p {
+        p, ul {
             font-size: 1.2em;
             line-height: 1.8;
             color: #ffffff;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 20px 0;
+        }
+        li {
+            margin: 10px 0;
         }
         footer {
             background: rgba(0, 0, 0, 0.9);
@@ -121,7 +129,6 @@
             <li><a href="pyramids.html">Pyramids</a></li>
             <li><a href="astral-game.html">Astral Game</a></li>
             <li><a href="med-beds.html">Med Beds</a></li>
-            <li><a href="panchristism.html">Panchristism</a></li>
             <li><a href="theory-of-everything.html">Theory of Everything</a></li>
             <li><a href="torus-energy.html">Torus Energy</a></li>
             <li><a href="donate.html">Donate</a></li>
@@ -132,8 +139,34 @@
     </header>
     <main>
         <div class="content-section">
-            <h2>Explore the Astral Plane</h2>
-            <p>Astral is a virtual reality game set in the near future, where players explore the astral plane’s seven levels. Using a sensory deprivation tank, a brain-computer interface (Silver Cord/Sutratma), and heart magnetic resonance monitoring, players control their avatar with brainwaves and heart signals. Ascend or descend through the levels with psychic powers like telekinesis and element manipulation. The solo campaign involves quests to reach the highest or lowest plane, while multiplayer mode offers an open-world experience to interact with spirits and co-create environments. Integrated with the Med Bed, Astral enhances immersion and healing.</p>
+            <h2>Journey Through the Astral Plane</h2>
+            <p>Astral is a groundbreaking virtual reality game set in 2030, where players explore the seven levels of the astral plane, a metaphysical realm of consciousness. Using the Med Bed Sensory Deprivation Tank, a brain-computer interface (BCI) called the Silver Cord/Sutratma, and heart magnetic resonance monitoring, players control their avatars with brainwaves and heart signals, creating a fully immersive experience.</p>
+            <h2>Gameplay Mechanics</h2>
+            <ul>
+                <li><strong>Control System:</strong> The BCI translates alpha (8–12 Hz) and theta (4–8 Hz) brainwaves into in-game actions, such as movement, telekinesis, and element manipulation. Heart rate variability (HRV) influences the avatar’s emotional state, affecting interactions with astral entities.</li>
+                <li><strong>Psychic Powers:</strong> Players can unlock abilities like telekinesis (moving objects with thought), pyrokinesis (fire manipulation), hydrokinesis (water manipulation), and astral projection (leaving the avatar to explore as a spirit form). Powers are upgraded by collecting "Aether Shards" found in each level.</li>
+                <li><strong>Energy System:</strong> Players have an "Aether Gauge" that depletes with power usage but recharges through meditation at sacred sites within the game, such as crystal caves or celestial temples.</li>
+                <li><strong>Quests:</strong> The solo campaign involves 21 main quests, each tied to a level of the astral plane. Players must solve puzzles, battle astral entities, and align their energy to ascend or descend. For example, a quest on the third level requires harmonizing a discordant energy field using hydrokinesis.</li>
+                <li><strong>Multiplayer Mode:</strong> An open-world experience where players can interact with others, co-create environments (e.g., building ethereal cities), and trade Aether Shards. Players can form "Astral Covenants" to undertake group quests, such as banishing a malevolent entity from the fifth level.</li>
+            </ul>
+            <h2>The Seven Levels of the Astral Plane</h2>
+            <ul>
+                <li><strong>Level 1 – The Ethereal Veil:</strong> A misty realm of soft light, where players learn basic psychic abilities. Inhabited by gentle spirits and glowing flora.</li>
+                <li><strong>Level 2 – The Crystal Abyss:</strong> A shimmering cavern of quartz and amethyst, filled with reflective pools that reveal past lives. Players face their fears in mirror-like challenges.</li>
+                <li><strong>Level 3 – The Verdant Expanse:</strong> A lush, forested plane with floating islands, where players master element manipulation. Home to nature spirits and trickster entities.</li>
+                <li><strong>Level 4 – The Celestial Nexus:</strong> A starry void with orbiting platforms, representing balance. Players must align their energy to proceed, facing trials of wisdom.</li>
+                <li><strong>Level 5 – The Shadow Rift:</strong> A dark, chaotic realm of swirling shadows, where players confront malevolent entities and their own inner darkness.</li>
+                <li><strong>Level 6 – The Solar Citadel:</strong> A golden city bathed in radiant light, guarded by angelic beings. Players must prove their purity to ascend further.</li>
+                <li><strong>Level 7 – The Cosmic Throne:</strong> The highest plane, a realm of pure consciousness where players commune with the Source, unlocking the ultimate power of creation.</li>
+            </ul>
+            <h2>Integration with Med Bed</h2>
+            <p>The Med Bed enhances the Astral experience by providing a sensory-deprived environment that amplifies the BCI’s effectiveness. The violet light (400–450 nm) and 432 Hz binaural beats induce a theta state, making it easier to enter the astral plane. The biofeedback system adjusts the game’s difficulty based on the player’s HRV and brainwave patterns, ensuring a personalized experience. Additionally, the Med Bed’s healing properties repair cellular damage during gameplay, making each session a rejuvenating journey.</p>
+            <h2>Unique Features</h2>
+            <ul>
+                <li><strong>Spirit Interactions:</strong> Players can communicate with astral entities, such as ancestors, guides, or deities like Aphrodite and Zeus, who offer quests and wisdom.</li>
+                <li><strong>Co-Creation:</strong> In multiplayer mode, players can use their psychic powers to sculpt the environment, creating structures like temples or gardens that persist across sessions.</li>
+                <li><strong>Karmic System:</strong> Actions in the game affect the player’s "Karmic Resonance," influencing how entities interact with them. Helping a spirit might grant a blessing, while harming one could summon a vengeful entity.</li>
+            </ul>
         </div>
     </main>
     <footer>
