--- a/pyramids.html
+++ b/pyramids.html
@@ -41,7 +41,7 @@
         nav ul {
             list-style: none;
             display: flex;
-            justify-content: center;
+            justify-content: center W;
             gap: 40px;
         }
         nav ul li a {
@@ -89,10 +89,18 @@
             margin-bottom: 20px;
             text-shadow: 0 0 10px #ffd700;
         }
-        p {
+        p, ul {
             font-size: 1.2em;
             line-height: 1.8;
             color: #ffffff;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 20px 0;
+        }
+        li {
+            margin: 10px 0;
         }
         footer {
             background: rgba(0, 0, 0, 0.9);
@@ -121,7 +129,6 @@
             <li><a href="pyramids.html">Pyramids</a></li>
             <li><a href="astral-game.html">Astral Game</a></li>
             <li><a href="med-beds.html">Med Beds</a></li>
-            <li><a href="panchristism.html">Panchristism</a></li>
             <li><a href="theory-of-everything.html">Theory of Everything</a></li>
             <li><a href="torus-energy.html">Torus Energy</a></li>
             <li><a href="donate.html">Donate</a></li>
@@ -132,8 +139,33 @@
     </header>
     <main>
         <div class="content-section">
-            <h2>Harnessing Ancient Power</h2>
-            <p>We are crafting a miniature replica of the Great Pyramid of Giza, scaled to 1:100 (1.46 meters tall), to harness its ancient energy. Built from polished granite sourced from Aswan, Egypt, and aligned to true north, this pyramid incorporates subterranean water channels, copper coils in four internal pillars, and a central quartz oscillator tuned to 432 Hz. Neodymium magnets generate a magnetic field, creating a self-sustaining energy loop that can power small devices or enhance meditation. This Aqua-Magnetic Resonator blends ancient wisdom with modern science to unlock the pyramid’s secrets.</p>
+            <h2>The Torus Pyramid: A Nexus of Ancient and Modern Wisdom</h2>
+            <p>Located above the Waikato River in New Zealand, the Torus Pyramid is a 1:100 scale replica of the Great Pyramid of Giza, standing 1.46 meters tall. Constructed from locally sourced granite, it is capped with a polished copper pyramidion to enhance its conductivity and harness the Earth’s magnetic fields, amplified by the river’s natural energy flow. This sacred structure serves as a mystery school, blending Greek, Egyptian, and Druid traditions, and acts as a hub for education, philosophy, religion, mysticism, science, and technological revolution.</p>
+            <h2>Design and Energy Harnessing</h2>
+            <ul>
+                <li><strong>Structure:</strong> The pyramid is built with precise 51.5° angles, mirroring Giza’s geometry, and aligned to true north to resonate with the Earth’s magnetic field. Its copper cap, weighing 5 kg, acts as a conductor, channeling geomagnetic energy into the structure.</li>
+                <li><strong>Magnetic Field Amplification:</strong> Positioned above the Waikato River, the pyramid leverages the river’s flow to generate a subtle hydroelectric effect, enhancing the local magnetic field. Neodymium magnets embedded in the base create a toroidal field, amplifying the pyramid’s energy output.</li>
+                <li><strong>Internal Chamber:</strong> A small chamber at the pyramid’s center houses a quartz crystal oscillator tuned to 432 Hz, the "frequency of the universe," which resonates with the copper cap to create a self-sustaining energy loop. This energy can power small devices or enhance meditation.</li>
+            </ul>
+            <h2>The Mystery School</h2>
+            <p>The Torus Pyramid is a sanctuary for the Torus Mystery School, where initiates study the wisdom of Greek, Egyptian, and Druid traditions. The school features altars to Pan, Athena, Zeus, Aphrodite, Thoth, and Ra, each surrounded by sacred groves and stone circles.</p>
+            <ul>
+                <li><strong>Altar to Pan:</strong> A grove of oak trees with a stone altar carved with goat motifs, where initiates learn the Druidic art of nature communion and the music of the spheres.</li>
+                <li><strong>Altar to Athena:</strong> A marble platform with an owl statue, dedicated to wisdom and strategy, where students study philosophy and logic.</li>
+                <li><strong>Altar to Zeus:</strong> A raised dais with a bronze eagle, symbolizing power and sovereignty, where initiates explore leadership and divine justice.</li>
+                <li><strong>Altar to Aphrodite:</strong> A rose garden with a seashell altar, adorned with the 6-petal flower symbol, where the Cult of Aphrodite practices rituals of love, beauty, and fertility.</li>
+                <li><strong>Altar to Thoth:</strong> A sandstone obelisk inscribed with hieroglyphs, dedicated to knowledge and writing, where students learn sacred geometry and alchemy.</li>
+                <li><strong>Altar to Ra:</strong> A golden sun disk atop a granite pillar, where initiates harness solar energy and study the cycles of creation.</li>
+            </ul>
+            <h2>Educational and Technological Hub</h2>
+            <p>The Torus Pyramid is a beacon for the New Roman Empire, fostering a renaissance of knowledge and innovation. It offers programs in:</p>
+            <ul>
+                <li><strong>Philosophy:</strong> Courses on Platonic, Stoic, and Hermetic thought, exploring the nature of reality and the self.</li>
+                <li><strong>Religion and Mysticism:</strong> Teachings on the Eleusinian Mysteries, Kemetic rituals, and Druidic rites, with practical training in meditation, astral projection, and energy work.</li>
+                <li><strong>Science:</strong> Research into geomagnetic energy, bioresonance, and quantum physics, with labs developing sustainable technologies.</li>
+                <li><strong>Technological Revolution:</strong> A tech incubator for projects like the Med Bed and Astral game, integrating ancient wisdom with modern innovation to create tools for human evolution.</li>
+            </ul>
+            <p>The pyramid’s energy field enhances cognitive function, making it an ideal space for learning and creativity. It stands as a symbol of unity, bridging the past and future to guide humanity toward a golden age.</p>
         </div>
     </main>
     <footer>
