--- a/family-tree.html
+++ b/family-tree.html
@@ -89,7 +89,7 @@
             margin-bottom: 20px;
             text-shadow: 0 0 10px #ffd700;
         }
-        p {
+        p, ul {
             font-size: 1.2em;
             line-height: 1.8;
             color: #ffffff;
@@ -100,9 +100,6 @@
             margin: 20px 0;
         }
         li {
-            font-size: 1.1em;
-            line-height: 1.6;
-            color: #ffffff;
             margin: 10px 0;
         }
         footer {
@@ -132,7 +129,6 @@
             <li><a href="pyramids.html">Pyramids</a></li>
             <li><a href="astral-game.html">Astral Game</a></li>
             <li><a href="med-beds.html">Med Beds</a></li>
-            <li><a href="panchristism.html">Panchristism</a></li>
             <li><a href="theory-of-everything.html">Theory of Everything</a></li>
             <li><a href="torus-energy.html">Torus Energy</a></li>
             <li><a href="donate.html">Donate</a></li>
@@ -144,7 +140,7 @@
     <main>
         <div class="content-section">
             <h2>The Eternal Lineage of Jacob Ryan Judah Clement Mawr Dawn</h2>
-            <p>My lineage is a cosmic thread, a torus of light stretching across millennia, from the dawn of creation to the present day. Below is the sacred progression of my ancestors, a lineage of divine stewards, kings, and prophets, leading back to the Earth Mother Gaia herself.</p>
+            <p>My lineage is a cosmic thread, a torus of light stretching across millennia, from the dawn of creation to the present day. Below is the sacred progression of my ancestors, a lineage of divine stewards, kings, prophets, and deities, leading back to the Earth Mother Gaia herself. This lineage includes the divine figures of Zeus and Aphrodite, whose cults are honored at the Torus Pyramid, the base of the New Roman Empire.</p>
             <ul>
                 <li><strong>Jacob Ryan Judah Clement Mawr Dawn (b. 1980s):</strong> The God-King of the Torus, born to resurrect the Roman Empire, launch CLEM crypto, and lead humanity to Giza’s truth.</li>
                 <li><strong>Elizabeth Anne Dawn (b. 1960s):</strong> My mother, a keeper of sacred wisdom, whose strength and light guide my path.</li>
@@ -173,11 +169,11 @@
                 <li><strong>Elizabeth Llywelyn (b. 1280s):</strong> Daughter of Llywelyn the Great, a Welsh prince who defended his people.</li>
                 <li><strong>Joan, Lady of Wales (b. 1250s):</strong> Wife of Llywelyn the Great, mother of his children.</li>
                 <li><strong>Eleanor de Montfort (b. 1220s):</strong> A matriarch of the 13th century, tied to Welsh and English nobility.</li>
-                <li><strong>Isabella of Angoulême (b. 1190s):</strong> A queen consort of England, connected to the Welsh princes.</li>
+                <li><strong>Isabella of Angoulême (b. 1190s):</strong> Queen consort of England, connected to the Welsh princes.</li>
                 <li><strong>Eleanor of Aquitaine (b. 1160s):</strong> A powerful queen of the 12th century, influencing European royalty.</li>
                 <li><strong>Matilda of Flanders (b. 1130s):</strong> A matriarch of the Norman dynasty, connected to Welsh kings.</li>
                 <li><strong>Adela of Normandy (b. 1100s):</strong> A woman of the early 12th century, tied to the Norman conquest.</li>
-                <li><strong>Matilda of Scotland (b. 1070s):</strong> A queen consort of England, connected to ancient Welsh kings.</li>
+                <li><strong>Matilda of Scotland (b. 1070s):</strong> Queen consort of England, connected to ancient Welsh kings.</li>
                 <li><strong>Margaret of Wessex (b. 1040s):</strong> A saintly queen of Scotland, tied to Anglo-Saxon kings.</li>
                 <li><strong>Ealdgyth of Mercia (b. 1010s):</strong> A matriarch of the 11th century, connected to Mercian kings.</li>
                 <li><strong>Ælfgifu of Northampton (b. 980s):</strong> A woman of the late 10th century, tied to Anglo-Saxon nobility.</li>
@@ -187,7 +183,7 @@
                 <li><strong>Osburh of Wessex (b. 860s):</strong> A matriarch of the 9th century, connected to Wessex kings.</li>
                 <li><strong>Eadburh of Wessex (b. 830s):</strong> A woman of the early 9th century, tied to the Wessex dynasty.</li>
                 <li><strong>Redburga of Wessex (b. 800s):</strong> A matriarch of the 8th century, connected to early Anglo-Saxon kings.</li>
-                <li><strong>Cynethryth of Mercia (b. 770s):</strong> A queen of Mercia, tied to Mercian kings.</li>
+                <li><strong>Cynethryth of Mercia (b. 770s):</strong> Queen of Mercia, tied to Mercian kings.</li>
                 <li><strong>Ælfflæd of Mercia (b. 740s):</strong> A woman of the 8th century, connected to Mercian nobility.</li>
                 <li><strong>Eaba of Wessex (b. 710s):</strong> A matriarch of the early 8th century, tied to Wessex kings.</li>
                 <li><strong>Ingild of Wessex (b. 680s):</strong> A woman of the late 7th century, connected to early Anglo-Saxon kings.</li>
@@ -195,95 +191,4 @@
                 <li><strong>Ceolwulf of Wessex (b. 620s):</strong> A woman of the early 7th century, connected to Wessex kings.</li>
                 <li><strong>Cynric of Wessex (b. 590s):</strong> A matriarch of the late 6th century, tied to early Anglo-Saxon kings.</li>
                 <li><strong>Cerdic of Wessex (b. 560s):</strong> A woman of the 6th century, connected to the founding of Wessex.</li>
-                <li><strong>Elesa of the Saxons (b. 530s):</strong> A matriarch of the early 6th century, tied to Saxon tribes.</li>
-                <li><strong>Elsie of the Saxons (b. 500s):</strong> A woman of the 5th century, connected to early Saxon settlers.</li>
-                <li><strong>Giants of Albion (b. 470s):</strong> A matriarch of the late 5th century, tied to the mythical giants of Britain.</li>
-                <li><strong>Brutus of Troy (b. 440s):</strong> A woman of the 5th century, connected to the legendary founder of Britain.</li>
-                <li><strong>Aeneas of Troy (b. 410s):</strong> A matriarch of the early 5th century, tied to Trojan exiles.</li>
-                <li><strong>Anchises of Troy (b. 380s):</strong> A woman of the 4th century, connected to the Trojan lineage.</li>
-                <li><strong>Capys of Troy (b. 350s):</strong> A matriarch of the 4th century, tied to Trojan kings.</li>
-                <li><strong>Assaracus of Troy (b. 320s):</strong> A woman of the 4th century, connected to the Trojan dynasty.</li>
-                <li><strong>Tros of Troy (b. 290s):</strong> A matriarch of the 3rd century, tied to the founding of Troy.</li>
-                <li><strong>Erichthonius of Dardania (b. 260s):</strong> A woman of the 3rd century, connected to Dardanian kings.</li>
-                <li><strong>Dardanus of Dardania (b. 230s):</strong> A matriarch of the 3rd century, tied to the founder of Dardania.</li>
-                <li><strong>Zerubbabel (b. 520 BCE):</strong> A leader of the return from Babylonian exile, who rebuilt the Temple.</li>
-                <li><strong>Shealtiel (b. 550 BCE):</strong> Father of Zerubbabel, a prince of Judah during the Babylonian captivity.</li>
-                <li><strong>Jeconiah (b. 580 BCE):</strong> A king of Judah, carried into exile, a descendant of David’s line.</li>
-                <li><strong>Josiah (b. 610 BCE):</strong> A righteous king of Judah, who restored the Temple.</li>
-                <li><strong>Manasseh (b. 640 BCE):</strong> A king of Judah, whose reign marked a turning point.</li>
-                <li><strong>Hezekiah (b. 670 BCE):</strong> A king of Judah, who defended Jerusalem.</li>
-                <li><strong>Ahaz (b. 700 BCE):</strong> A king of Judah, whose reign tested the Davidic line.</li>
-                <li><strong>Jotham (b. 730 BCE):</strong> A king of Judah, a descendant of David’s line.</li>
-                <li><strong>Uzziah (b. 760 BCE):</strong> A king of Judah, who reigned during prosperity.</li>
-                <li><strong>Amaziah (b. 790 BCE):</strong> A king of Judah, a descendant of David’s line.</li>
-                <li><strong>Joash (b. 820 BCE):</strong> A king of Judah, who repaired the Temple.</li>
-                <li><strong>Ahaziah (b. 850 BCE):</strong> A king of Judah, a descendant of David’s line.</li>
-                <li><strong>Jehoram (b. 880 BCE):</strong> A king of Judah, a descendant of David.</li>
-                <li><strong>Jehoshaphat (b. 910 BCE):</strong> A righteous king of Judah, a descendant of David.</li>
-                <li><strong>Asa (b. 940 BCE):</strong> A king of Judah, who sought the Lord.</li>
-                <li><strong>Abijah (b. 970 BCE):</strong> A king of Judah, a descendant of David’s line.</li>
-                <li><strong>Rehoboam (b. 1000 BCE):</strong> Son of Solomon, whose reign divided the kingdom.</li>
-                <li><strong>Solomon (b. 1030 BCE):</strong> Son of David, the wise king who built the First Temple.</li>
-                <li><strong>King David (b. 1060 BCE):</strong> The anointed shepherd-king of Israel, a warrior and poet.</li>
-                <li><strong>Jesse (b. 1090 BCE):</strong> Father of King David, a humble shepherd.</li>
-                <li><strong>Obed (b. 1120 BCE):</strong> Son of Boaz and Ruth, a key link to King David.</li>
-                <li><strong>Boaz (b. 1150 BCE):</strong> A righteous man of Judah’s line, husband of Ruth.</li>
-                <li><strong>Salmon (b. 1180 BCE):</strong> Father of Boaz, a man of Judah’s line.</li>
-                <li><strong>Nahshon (b. 1210 BCE):</strong> A leader of Judah during the Exodus.</li>
-                <li><strong>Amminadab (b. 1240 BCE):</strong> Father of Nahshon, a man of Judah’s line.</li>
-                <li><strong>Ram (b. 1270 BCE):</strong> A man of Judah’s line, a descendant of Hezron.</li>
-                <li><strong>Hezron (b. 1300 BCE):</strong> Son of Pharez, a man of Judah’s line.</li>
-                <li><strong>Pharez (b. 1330 BCE):</strong> Son of Judah, whose descendants were esteemed.</li>
-                <li><strong>Judah (b. 1360 BCE):</strong> The lion of the royal line, progenitor of kings.</li>
-                <li><strong>Jacob (Israel) (b. 1390 BCE):</strong> The patriarch who fathered the twelve tribes.</li>
-                <li><strong>Isaac (b. 1420 BCE):</strong> The son of promise, a patriarch of the covenant.</li>
-                <li><strong>Abraham (b. 1450 BCE):</strong> The patriarch of faith, who forged a covenant with God.</li>
-                <li><strong>Terah (b. 1480 BCE):</strong> Father of Abraham, a man of Ur.</li>
-                <li><strong>Nahor (b. 1510 BCE):</strong> Father of Terah, a descendant of Shem.</li>
-                <li><strong>Serug (b. 1540 BCE):</strong> A man of Shem’s line, during the Tower of Babel.</li>
-                <li><strong>Reu (b. 1570 BCE):</strong> A descendant of Shem, a man of faith.</li>
-                <li><strong>Peleg (b. 1600 BCE):</strong> A man of Shem’s line, marking the scattering of nations.</li>
-                <li><strong>Eber (b. 1630 BCE):</strong> A descendant of Shem, progenitor of the Hebrews.</li>
-                <li><strong>Shelah (b. 1660 BCE):</strong> A man of Shem’s line, a keeper of the sacred lineage.</li>
-                <li><strong>Arphaxad (b. 1690 BCE):</strong> Son of Shem, a post-flood generation man.</li>
-                <li><strong>Shem (b. 1720 BCE):</strong> Son of Noah, a righteous man who carried God’s blessing.</li>
-                <li><strong>Noah (b. 1750 BCE):</strong> The ark’s builder, who preserved humanity through the Great Flood.</li>
-                <li><strong>Lamech (b. 1780 BCE):</strong> Father of Noah, a man of faith in a corrupt world.</li>
-                <li><strong>Methuselah (b. 1810 BCE):</strong> The longest-lived man, grandfather of Noah.</li>
-                <li><strong>Enoch (b. 1840 BCE):</strong> A man who walked with God and was taken by Him.</li>
-                <li><strong>Jared (b. 1870 BCE):</strong> Father of Enoch, a man of the early generations.</li>
-                <li><strong>Mahalalel (b. 1900 BCE):</strong> A descendant of Seth, of the 5th generation.</li>
-                <li><strong>Kenan (b. 1930 BCE):</strong> A man of the 4th generation, a keeper of the sacred line.</li>
-                <li><strong>Enosh (b. 1960 BCE):</strong> Son of Seth, of the 3rd generation, who called upon the Lord.</li>
-                <li><strong>Seth (b. 1990 BCE):</strong> Son of Adam, the appointed seed to carry the divine promise.</li>
-                <li><strong>Adam (b. 2020 BCE):</strong> The first man, created by God, father of all humanity.</li>
-                <li><strong>Gaia (Primordial Era):</strong> The Earth Mother, the primordial essence of creation.</li>
-            </ul>
-            <p>This sacred lineage is a testament to my divine purpose, guiding me as the three-eyed raven illuminates my path.</p>
-        </div>
-    </main>
-    <footer>
-        <p>© 2025 Blessed Raven. All rights reserved.</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script>
-        particlesJS("particles-js", {
-            "particles": {
-                "number": { "value": 100, "density": { "enable": true, "value_area": 800 } },
-                "color": { "value": ["#ff3333", "#ffd700"] },
-                "shape": { "type": "circle" },
-                "opacity": { "value": 0.5, "random": true },
-                "size": { "value": 3, "random": true },
-                "line_linked": { "enable": true, "distance": 150, "color": "#ff3333", "opacity": 0.3, "width": 1 },
-                "move": { "enable": true, "speed": 2, "direction": "none", "random": true, "straight": false, "out_mode": "out", "bounce": false }
-            },
-            "interactivity": {
-                "detect_on": "canvas",
-                "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" }, "resize": true },
-                "modes": { "repulse": { "distance": 100, "duration": 0.4 }, "push": { "particles_nb": 4 } }
-            },
-            "retina_detect": true
-        });
-    </script>
-</body>
-</html>
+                <li
